# onetimepass-plasma

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindLiboath.cmake
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.onetimepass.desktop  provider.cpp  provider.h  resources.qrc
src/gui/qml/: AddEntry.qml  DeleteEntry.qml  MainWindow.qml  OTPDelegate.qml
src/runner/: CMakeLists.txt  otprunner.cpp  otprunner.h  plasma-runner-onetimepass.desktop
